# nrf52-rust-semihosting

./: Cargo.toml  readme.md
src/: main.rs
